# datatables-django-widget

./: LICENSE  README.md  docker-compose.yml
app/: Dockerfile
app/demo_app/: forms.py  views.py
app/project/: settings.py  urls.py
app/static/: project.css
app/static/grid-widget/: grid-widget.js
app/static/grid-widget/datatables/: README.md
app/templates/: base.html
app/templates/demo_app/demo_model/: demo_model_create.html  demo_model_list.html
app/templates/utils/widgets/: grid-widget.html
app/utils/: fields.py
src/app/: .env  pyproject.toml
src/app/demo_app/: admin.py  forms.py  models.py  urls.py  views.py
src/app/demo_app/migrations/: 0001_initial.py
src/app/docker/: entrypoint  start
src/app/project/: settings.py  urls.py
src/app/static/: project.js
src/app/static/grid-widget/: grid-widget-textarea-plugin.js  grid-widget.css  grid-widget.js
src/app/templates/: base.html
src/app/templates/demo_app/demo_model/: demo_model_update.html
src/app/utils/: widgets.py
