[project]
name = "datatables-django-widget"
version = "1.0.0"
description = "Wrap up datatables editor in a Django widget for editing ArrayFields"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.12.0",
    "django>=5.2",
    "psycopg[c]==3.2.6",
    "uvicorn[standard]==0.34.0",
]
